# web-extensions-sys

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/basic-web-extension/: .justfile  Cargo.toml  README.md  manifest.json
examples/basic-web-extension/background-script/: Cargo.toml  index.js
examples/basic-web-extension/background-script/src/: lib.rs
examples/basic-web-extension/foreground-script/: Cargo.toml  index.js  style.css
examples/basic-web-extension/foreground-script/src/: lib.rs
examples/basic-web-extension/messages/: Cargo.toml
examples/basic-web-extension/messages/src/: lib.rs
examples/basic-web-extension/options/: Cargo.toml  index.html  index.js
examples/basic-web-extension/options/src/: lib.rs
src/: action.rs  bookmarks.rs  browser_action.rs  commands.rs  context_menus.rs  contextual_identities.rs  downloads.rs  history.rs  identity.rs  lib.rs  omnibox.rs  port.rs  runtime.rs  scripting.rs  sessions.rs  sidebar_action.rs  storage.rs  tabs.rs  theme.rs  windows.rs
