[package]
name = "web-extensions-sys"
version = "0.1.0"
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>", "Pauan <pcxunlimited@gmail.com>"]
edition = "2021"
description = "This crate provides WebExtension API WASM bindings"
repository = "https://github.com/web-extensions-rs/web-extensions-sys"
license = "MIT"
keywords = ["api", "ffi", "wasm", "web", "webassembly"]
categories = ["external-ffi-bindings", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.58"
wasm-bindgen-futures = "0.4.31"
wasm-bindgen = "0.2.81"
