[package]
name = "web-extensions-sys"
version = "0.3.2"
authors = [
  "Roman Volosatovs <rvolosatovs@riseup.net>",
  "Pauan <pcxunlimited@gmail.com>",
  "Markus Kohlhase <markus.kohlhase@slowtec.de>",
]
edition = "2021"
description = "This crate provides WebExtension API WASM bindings"
repository = "https://github.com/web-extensions-rs/web-extensions-sys"
readme = "README.md"
license = "MIT"
keywords = ["api", "ffi", "wasm", "web", "webassembly"]
categories = ["external-ffi-bindings", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
