[package]
name = "background-script"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo-console = "0.2.1"
js-sys = "0.3.58"
messages = { version = "0.0.0", path = "../messages" }
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.31"
web-extensions-sys = "0.1.0"
