[package]
name = "background-script"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo-console = "0.2.3"
gloo-timers = { version = "0.2.4", features = ["futures"] }
gloo-utils = "0.1.5"
js-sys = "0.3.60"
messages = { version = "0.0.0", path = "../messages" }
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-extensions-sys = "0.3.3"
